<resources>
    <string name="app_name">TraG</string>
    
    //Main menu
    <string name="my_tasks">Мои задачи</string>
    <string name="employees">Сотрудники</string>
    <string name="map">Карта</string>
    <string name="account">Аккаунт</string>
    <string name="driver">Водитель</string>
    <string name="my_data">Мои данные</string>
    <string name="contacts_safety">Контакты, личные данные</string>
    <string name="about_app">О приложении</string>
    <string name="version_developer">Версия, разработчики</string>
    <string name="settings">Настройки</string>
    <string name="language_notifications">Язык, уведомления</string>
    <string name="diploma_info">Разработано студентом ХНУ им. В.Н. Каразина\nФакультет компьютерных наук\nБогдан Роман\nг. Харьков, 2018 год</string>
    <string name="all_rights_reserved">© Все права защищены</string>
    <string name="insta_link">instagram.com/rogdan_</string>
    <string name="insta_link_https">https://www.instagram.com/rogdan_/</string>
    <string name="mail_link">dolgokakatel91@gmail.com</string>
    <string name="version_format">Версия %s</string>
    <string name="approximately_format">Примерно %s</string>
    <string name="finish_to_format">Закончить до %s</string>
    <string name="task_number_format">Задача #%d</string>
    <string name="number_format">#%d</string>
    <string name="km_format">%d км</string>
    <string name="customer_format">Заказчик %s</string>
    <string name="min">мин</string>
    <string name="h">ч</string>
    <string name="choose_task">Выберите задачу</string>
    <string name="start">Начать</string>
    <string name="customer_comment">Комментарий клиента</string>
    <string name="app_language">Язык приложения</string>
    <string name="russian">Русский</string>
    <string name="ukrainian">Украинский</string>
    <string name="receive_notifications">Получать уведомления</string>
    <string name="new_tasks">Новые задачи</string>
    <string name="terms_of_use">Условия использования</string>
    <string name="tasks_update">Обновление задач</string>
    <string name="you_cant_edit_phone">Нельзя изменить номер телефона</string>
    <string name="my_name">Мое имя</string>
    <string name="email">Електронный адрес</string>
    <string name="phone_for_authorisation_and_connection">Телефон для авторизации и связи</string>
    <string name="for_callback_with_us">Для обратной связи с вами</string>
    <string name="cancel_access_for_all">Отменить всем доступ</string>
    <string name="enter_your_name">Укажите свое имя</string>
    <string name="add_email">Добавьте электронный адрес</string>
    <string name="are_you_grateful_that_someone_got_away_your_account">Подозреваете, что кто-то завладел вашим аккаунтом?</string>
    <string name="all_sessions_closed">Все сессии закрыты</string>
    <string name="failed_pick_manager">Просрочено. Менеджер свяжеться с вами</string>
    <string name="finished_success">Выполнено успешно</string>

    <string name="point">пункт</string>
    <string name="point_a">пункта</string>
    <string name="points">пунктов</string>

    <array name="station_format">
        <item>пунктов</item>
        <item>пункт</item>
        <item>пункта</item>
    </array>

    <array name="tasks_tabs">
        <item>Активные</item>
        <item>Архив</item>
    </array>

    <string name="google_maps_key">AIzaSyBgB9Pr_LI7Mowe3T8ceBXLfv7TsiguR20</string>
</resources>
