<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/item_title"/>

    <LinearLayout
        android:id="@+id/screen_content"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/my_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/my_data_iv"
                android:alpha="0.3"
                android:src="@drawable/user_round"
                android:layout_margin="@dimen/pad_12"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <LinearLayout
                android:layout_toEndOf="@+id/my_data_iv"
                android:layout_toStartOf="@+id/open_iv"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TitleTS"
                    android:text="@string/my_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/contacts_safety"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/pad_4"
                    style="@style/SubtitleTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:id="@+id/open_iv"
                android:src="@drawable/arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/pad_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_below="@+id/my_data_iv"
                style="@style/DividerStyle"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/settings_iv"
                android:alpha="0.3"
                android:src="@drawable/setting_icon"
                android:layout_margin="@dimen/pad_12"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <LinearLayout
                android:layout_toEndOf="@+id/settings_iv"
                android:layout_toStartOf="@+id/settings_open_iv"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TitleTS"
                    android:text="@string/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/language_notifications"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/pad_4"
                    style="@style/SubtitleTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settings_open_iv"
                android:src="@drawable/arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/pad_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_below="@+id/settings_iv"
                style="@style/DividerStyle"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_app_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/about_app_iv"
                android:alpha="0.3"
                android:src="@drawable/question_icon"
                android:layout_margin="@dimen/pad_12"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <LinearLayout
                android:layout_toEndOf="@+id/about_app_iv"
                android:layout_toStartOf="@+id/about_app_open_iv"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TitleTS"
                    android:text="@string/about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/version_developer"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/pad_4"
                    style="@style/SubtitleTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:id="@+id/about_app_open_iv"
                android:src="@drawable/arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/pad_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        style="?android:progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>